# missing_spans

./: Cargo.toml
src/: lib.rs
tests/: compile_tests.rs
tests/ui/: inline_mod.rs  inline_mod.stderr  inline_mod_with_attr.rs  inline_mod_with_attr.stderr  struct.rs  struct.stderr
